--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/node": "^20.0.0"
   }
 }
