--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handld-home-nextjs",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "framer-motion": "^7.6.14",
-    "lucide-react": "^0.294.0",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -18,9 +17,6 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.0.4",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.0.4"
   }
 }
