--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "framer-motion": "^7.6.14",
+    "lucide-react": "^0.468.0",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
