--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.5",
